--- a/toolchain/base/BUILD.bazel
+++ b/toolchain/base/BUILD.bazel
@@ -2,33 +2,23 @@
 load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")
 
 scala_toolchain(
-    name = "development-scala_toolchain",
-    dependency_mode = "direct",
+    name = "base-scala_toolchain",
     scalacopts = [
                 "-encoding",
                 "UTF-8",
                 "-feature",
                 "-unchecked",
-                #"-Xfatal-warnings",
                 "-deprecation",
                 "-language:existentials",
                 "-language:higherKinds",
                 "-language:implicitConversions",
-                #"-Ywarn-dead-code",
-                #"-Ywarn-numeric-widen",
-                #"-Ywarn-value-discard",
-                #"-Xlint:-unused,_",
-                #"-Ywarn-unused:imports",
-                "-Yrangepos",
             ],
-    strict_deps_mode = "warn",
-    unused_dependency_checker_mode = "warn",
     visibility = ["//visibility:public"],
 )
 
 toolchain(
-    name = "development",
-    toolchain = "development-scala_toolchain",
+    name = "base",
+    toolchain = "base-scala_toolchain",
     toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
     visibility = ["//visibility:public"],
 )
