--- a/toolchain/BUILD.bazel
+++ b/toolchain/BUILD.bazel
@@ -16,8 +16,8 @@ scala_toolchain(
     visibility = ["//visibility:public"],
     strict_deps_mode = "error",
     unused_dependency_checker_mode = "error", 
-    dependency_tracking_method = "high-level",
-    dependency_mode = "direct",
+    dependency_tracking_method = "ast",
+    dependency_mode = "plus-one",
 )
 
 toolchain(
