--- a/commondeps/munit/BUILD.bazel
+++ b/commondeps/munit/BUILD.bazel
@@ -1,11 +1,9 @@
 load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
 
 munit_effect_deps = [
-    "@maven//:org_typelevel_cats_core_2_13",
-    "@maven//:org_typelevel_cats_effect_2_13",
-    "@maven//:org_typelevel_cats_effect_kernel_2_13",
-    "@maven//:org_typelevel_cats_effect_std_2_13",
-    "@maven//:org_typelevel_cats_kernel_2_13",
+    "@maven//:org_scala_lang_scala_library",
+    "//commondeps/cats:cats",
+    "//commondeps/cats:cats_effect",
     "@maven//:org_scalameta_munit_2_13",
 ]
 
