--- a/commondeps/circe/BUILD.bazel
+++ b/commondeps/circe/BUILD.bazel
@@ -2,6 +2,8 @@ load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
 
 circe_exports = [
     "@maven//:io_circe_circe_core_2_13",
+    "@maven//:io_circe_circe_parser_2_13",
+    "@maven//:io_circe_circe_jawn_2_13",
     "@maven//:io_circe_circe_generic_2_13",
     "@maven//:com_chuusai_shapeless_2_13",
 ]
