--- a/toolchain/BUILD.bazel
+++ b/toolchain/BUILD.bazel
@@ -17,14 +17,38 @@ scala_toolchain(
     strict_deps_mode = "error",
     unused_dependency_checker_mode = "error", 
     dependency_tracking_method = "ast",
+    dependency_mode = "plus-one",
+)
+
+toolchain(
+    name = "toolchain",
+    toolchain = "toolchain-scala_toolchain",
+    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
+    visibility = ["//visibility:public"],
+)
+
+scala_toolchain(
+    name = "toolchain-scala_lsp",
+    scalacopts = [
+                "-encoding",
+                "UTF-8",
+                "-feature",
+                "-unchecked",
+                "-deprecation",
+                "-language:existentials",
+                "-language:higherKinds",
+                "-language:implicitConversions",
+            ],
+    visibility = ["//visibility:public"],
+    dependency_tracking_method = "ast",
     enable_diagnostics_report = True,
     dependency_mode = "plus-one",
     enable_semanticdb = True
 )
 
 toolchain(
-    name = "toolchain",
-    toolchain = "toolchain-scala_toolchain",
+    name = "lsp",
+    toolchain = "toolchain-scala_lsp",
     toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
     visibility = ["//visibility:public"],
 )
